--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -8,17 +8,17 @@ authors = ["long"]
 python = "^3.8"
 Django = "^3.2"
 djangorestframework = "^3.12.4"
-ipython = "^7.22.0"
-psycopg2 = "^2.9.1"
 gunicorn = "^20.1.0"
-requests = "^2.25.1"
-python-decouple = "^3.4"
-#django-create-react-app = "^0.8.4"
+flake8 = "^3.9.2"
+psycopg2-binary = "^2.9.1"
+#psycopg2 = "^2.9.1"
+#python-decouple = "^3.4"
+mypy = "^0.910"
 
 [tool.poetry.dev-dependencies]
+ipython = "^7.22.0"
 neovim = "^0.3.1"
-flake8 = "^3.9.2"
-autopep8 = "^1.5.7"
+requests = "^2.25.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
