--- a/docker/backend/Dockerfile
+++ b/docker/backend/Dockerfile
@@ -3,19 +3,20 @@
 FROM python:3.9-slim
 
 # set work directory
-WORKDIR /usr/app/backend
+WORKDIR /app
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
 # copy poetry files
-COPY poetry.lock pyproject.toml .
+COPY ./backend/poetry.lock ./backend/pyproject.toml .
 
 # install dependencies
 RUN pip install poetry
 RUN poetry install --no-dev
 
 # copy project
-COPY . .
+COPY ./backend ./
+COPY ./docker /docker
 #RUN poetry run flake8 .
