--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,6 @@
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^4.0.3",
     "typescript": "^4.3.5",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0",
@@ -58,6 +57,6 @@
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.8",
     "@types/yup": "^0.29.13",
-    "webpack-cli": "^4.8.0"
+    "react-scripts": "^4.0.3"
   }
 }
