--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,11 +9,11 @@ python = "^3.8"
 Django = "^3.2"
 djangorestframework = "^3.12.4"
 gunicorn = "^20.1.0"
-flake8 = "^3.9.2"
 psycopg2-binary = "^2.9.1"
 #psycopg2 = "^2.9.1"
-#python-decouple = "^3.4"
+flake8 = "^3.9.2"
 mypy = "^0.910"
+meinheld = "^1.0.2"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.22.0"
