--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -23,12 +23,10 @@ WORKDIR /app
 
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
-ENV APP_MODULE backend.wsgi
 
 # install dependencies
 COPY ./backend/poetry.lock ./backend/pyproject.toml .
 RUN pip install poetry
-#RUN poetry install --no-dev
 RUN poetry export -f requirements.txt --output requirements.txt
 RUN pip install --no-cache-dir --upgrade -r /app/requirements.txt
 
@@ -39,12 +37,7 @@ COPY ./backend ./
 RUN rm -rf /usr/share/nginx/html/*
 COPY --from=builder /app/build /usr/share/nginx/html
 
-# Copy nginx configuration
-#COPY ./docker/frontend/nginx/nginx.conf /etc/nginx/conf.d/custom.conf
-
-# Copy prestart script
+# Copy docker image related files
 COPY ./docker/prestart.sh /app
 COPY ./docker/print-nginx-conf.sh /app
-
-# Copy uwsgi.ini
 COPY ./docker/uwsgi.ini /app
