--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -18,6 +18,7 @@ mypy = "^0.910"
 ipython = "^7.22.0"
 neovim = "^0.3.1"
 requests = "^2.25.1"
+black = "^21.9b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
