--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
 
-  backend:
+  site:
     build:
       context: .
       dockerfile: ./Dockerfile
@@ -14,8 +14,11 @@ services:
       - db
 
   db:
-    image: postgres:13.0-alpine
+    image: postgres:alpine
     volumes:
-      - postgres_data:/var/lib/postgresql/data/
+      - bingo_memes_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.dev
+
+volumes:
+  bingo_memes_data:
