--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,5 +58,9 @@
     "@types/react-router-dom": "^5.1.8",
     "@types/yup": "^0.29.13",
     "react-scripts": "^4.0.3"
+  },
+  "prettier": {
+    "printWidth": 120,
+    "tabWidth": 4
   }
 }
