--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,8 +15,8 @@ services:
 
   db:
     image: postgres:alpine
-      #volumes:
-      #  - db_data:/var/lib/postgresql/data/
+    volumes:
+      - db_data:/var/lib/postgresql/data/
     env_file:
       - ./.env.dev
 
