modified:   Dockerfile 	modified:   backend/api/serializers.py 	modified:   backend/api/tests.py 	modified:   backend/api/urls.py 	modified:   backend/api/views.py 	modified:   backend/backend/settings.py 	modified:   backend/poetry.lock 	modified:   backend/pyproject.toml 	modified:   backend/setup.cfg

--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -1,6 +1,6 @@
 # https://pycodestyle.pycqa.org/en/latest/intro.html#configuration
 [flake8]
-ignore = W503,E266
+ignore = W503,E266,F401
 max-line-length = 160
 
 [mypy]
