--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -13,6 +13,7 @@ psycopg2-binary = "^2.9.1"
 #gunicorn = "^20.1.0"
 flake8 = "^3.9.2"
 mypy = "^0.910"
+django-cors-headers = "^3.10.0"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.22.0"
