--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,12 @@ psycopg2-binary = "^2.9.1"
 flake8 = "^3.9.2"
 mypy = "^0.910"
 django-cors-headers = "^3.10.0"
+django-ninja = "^0.16.1"
+factory-boy = "^3.2.1"
+email-validator = "^1.1.3"
+cryptography = "^36.0.1"
+django-ninja-jwt = "^5.1.5"
+django-ninja-extra = "^0.14.0"
 
 [tool.poetry.dev-dependencies]
 ipython = "^7.22.0"
