--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,11 +6,11 @@ authors = ["long"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-Django = "^3.2.5"
+Django = "^4.0"
 djangorestframework = "^3.12.4"
 psycopg2-binary = "^2.9.1"
-flake8 = "^3.9.2"
-mypy = "^0.910"
+flake8 = "^4.0.1"
+mypy = "^0.930"
 django-cors-headers = "^3.10.0"
 django-ninja = "^0.16.1"
 factory-boy = "^3.2.1"
@@ -18,12 +18,15 @@ email-validator = "^1.1.3"
 cryptography = "^36.0.1"
 django-ninja-jwt = "^5.1.5"
 django-ninja-extra = "^0.14.0"
+pytest = "^6.2.5"
+pytest-django = "^4.5.2"
+pytest-xdist = "^2.5.0"
 
 [tool.poetry.dev-dependencies]
+black = "^21.12b0"
 ipython = "^7.22.0"
 neovim = "^0.3.1"
 requests = "^2.25.1"
-black = "^21.9b0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
