--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -5,3 +5,7 @@ max-line-length = 160
 
 [mypy]
 ignore_missing_imports = true
+
+[tool:pytest]
+DJANGO_SETTINGS_MODULE = backend.settings
+addopts = -rA --disable-warnings --no-migrations
