--- a/frontend/package.json
+++ b/frontend/package.json
@@ -65,5 +65,9 @@
   "prettier": {
     "printWidth": 120,
     "tabWidth": 4
+  },
+  "resolutions": {
+    "//": "See https://github.com/facebook/create-react-app/issues/11773",
+    "react-error-overlay": "6.0.9"
   }
 }
