--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,7 +12,6 @@ psycopg2-binary = "^2.9.1"
 flake8 = "^4.0.1"
 mypy = "^0.930"
 django-cors-headers = "^3.10.0"
-django-ninja = "^0.16.1"
 factory-boy = "^3.2.1"
 email-validator = "^1.1.3"
 cryptography = "^36.0.1"
@@ -21,6 +20,7 @@ django-ninja-extra = "^0.14.0"
 pytest = "^6.2.5"
 pytest-django = "^4.5.2"
 pytest-xdist = "^2.5.0"
+django-ninja = {git = "https://github.com/vitalik/django-ninja"}
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
