--- a/frontend/package.json
+++ b/frontend/package.json
@@ -2,6 +2,7 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8000",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.36",
     "@fortawesome/free-solid-svg-icons": "^5.15.4",
@@ -19,13 +20,14 @@
     "bootstrap": "^5.1.0",
     "formik": "^2.2.6",
     "node-sass": "^6.0.1",
+    "openapi-client-axios": "^4.4.9",
     "popper.js": "^1.16.1",
     "react": "^17.0.1",
     "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
     "react-icons": "^4.2.0",
-    "react-router-dom": "^5.2.0",
+    "react-router-dom": "^6.2.1",
     "typescript": "^4.3.5",
     "universal-cookie": "^4.0.4",
     "web-vitals": "^2.1.0",
