lots of rewriting with nothing final, just a stopping point

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["long"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-Django = "^4.0"
+Django = "^4.0.1"
 djangorestframework = "^3.12.4"
 psycopg2-binary = "^2.9.1"
 flake8 = "^4.0.1"
@@ -20,13 +20,14 @@ django-ninja-extra = "^0.14.0"
 pytest = "^6.2.5"
 pytest-django = "^4.5.2"
 pytest-xdist = "^2.5.0"
-django-ninja = {git = "https://github.com/vitalik/django-ninja"}
+django-ninja = "^0.16.1"
 
 [tool.poetry.dev-dependencies]
 black = "^21.12b0"
-ipython = "^7.22.0"
+ipython = "^8.0.0"
 neovim = "^0.3.1"
 requests = "^2.25.1"
+nplusone = "^1.0.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
