--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -9,3 +9,4 @@ ignore_missing_imports = true
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = backend.settings
 addopts = -rA --disable-warnings --no-migrations
+python_files = tests.py
