--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -2,11 +2,14 @@
 [flake8]
 ignore = W503,E266,F401
 max-line-length = 160
+exclude = migrations
 
 [mypy]
 ignore_missing_imports = true
+exclude = migrations
 
 [tool:pytest]
 DJANGO_SETTINGS_MODULE = backend.settings
 addopts = -rA --disable-warnings --no-migrations
+#addopts = -s --disable-warnings --no-migrations
 python_files = tests.py
