--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@types/react-helmet": "^6.1.2",
     "@types/react-router-dom": "^5.1.8",
     "@types/yup": "^0.29.13",
+    "axios": "^0.25.0",
     "bootstrap": "^5.1.0",
     "formik": "^2.2.6",
     "node-sass": "^6.0.1",
@@ -65,7 +66,7 @@
     "webpack-cli": "^4.9.1"
   },
   "prettier": {
-    "printWidth": 120,
+    "printWidth": 90,
     "tabWidth": 4
   },
   "resolutions": {
