--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -6,18 +6,17 @@ authors = ["long"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-Django = "^3.2.5"
-djangorestframework = "^3.12.4"
-psycopg2-binary = "^2.9.1"
-flake8 = "^3.9.2"
-mypy = "^0.910"
-django-cors-headers = "^3.10.0"
+Django = "^4.0.3"
+djangorestframework = "^3.13.1"
+psycopg2-binary = "^2.9.3"
+django-cors-headers = "^3.11.0"
+ipython = "^8.1.1"
 
 [tool.poetry.dev-dependencies]
-ipython = "^7.22.0"
-neovim = "^0.3.1"
-requests = "^2.25.1"
-black = "^21.9b0"
+flake8 = "^4.0.1"
+mypy = "^0.941"
+black = "^22.1.0"
+httpx = "^0.22.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
