--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,11 +2,11 @@ version: '3.8'
 
 services:
 
-  site_dev:
+  site:
     build:
       context: .
       dockerfile: ./Dockerfile
     ports:
       - "8080:80"
     env_file:
-      - ./.env.dev
+      - ./.env.old
