--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -25,3 +25,6 @@ httpx = "^0.22.0"
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+DJANGO_SETTINGS_MODULE = "backend.settings"
